--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "react-redux-starter-kit",
   "version": "1.0.0",
   "description": "Starter kit for React and Redux by Tushar",
+  "scripts": {
+    "prestart": "babel-node tools/startMessage.js",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "open:src": "babel-node tools/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
+  },
   "author": "Tushar Khatiwada",
   "license": "MIT",
   "dependencies": {
